Bug 438918 - graph of fit is not rendered when lab plot uses comma as decimal separator
Summary: graph of fit is not rendered when lab plot uses comma as decimal separator
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.8.2
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-19 15:42 UTC by pcfreak115
Modified: 2021-06-20 17:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pcfreak115 2021-06-19 15:42:47 UTC
SUMMARY
The graph of a fit is only rendered with "." as decimal separator, not with ",".

STEPS TO REPRODUCE
Linearly fitting the following data in "." or "," mode
1  1
2  2
3  3
4  4
is fine,

fitting the following data in "," mode however will result in the graph of the fit not being rendered ("." mode is fine)
1,1  1,1
1,2  1,2
1,3  1,3
1,4  1,4

Tested with linear fit and some exponential fit on the provided example data and some experimental data.

OBSERVED RESULT
graph of fit is not visible in "," mode

EXPECTED RESULT
the graph is visible even in "," mode (and in the other modes as well for that matter, i haven't really tested that though)

SOFTWARE/OS VERSIONS
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.2
Comment 1 Stefan Gerlach 2021-06-20 17:49:02 UTC
Git commit 33f07cbc8e8e5550561b7d7a866819fdf23fcde2 by Stefan Gerlach.
Committed on 20/06/2021 at 17:48.
Pushed by sgerlach into branch 'master'.

Fix missing locale supprt in evaluating range of fit function
FIXED-IN: 2.9

M  +2    -1    src/backend/gsl/ExpressionParser.cpp
M  +2    -1    src/backend/worksheet/plots/cartesian/XYFitCurve.cpp

https://invent.kde.org/education/labplot/commit/33f07cbc8e8e5550561b7d7a866819fdf23fcde2