Fix missing locale supprt in evaluating range of fit function

BUG: 438918
FIXED-IN: 2.9